# ai-assistant

./: .aider.chat.history.md  .gitignore  AGENTS.md  CLAUDE.md  README.md  orchestrator-playground.html  package.json  vite.config.js
server/: PLAN.md  (+3 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/docs/: controller_refactor_plan.md  image-support-plan.md  llm-provider-dispatch-refactor-plan-2026-03-10.md  mcp-migration-plan.md  mcp-oauth-testing.md  mcp-oauth.md  tool_outputs_traversal_spec.md
src-tauri/docs/agent/: README.md  commands.md  flows.md  invariants.md  repo-map.md
src-tauri/src/: events.rs  main.rs  tool_outputs.rs
src-tauri/src/agent/: controller_parsing.rs  mod.rs  orchestrator.rs  output_delivery.rs  output_metadata.rs  prompts.rs  tests.rs  text_utils.rs  tool_arg_hydration.rs  tool_execution.rs
src-tauri/src/agent/prompts/: controller.txt
src-tauri/src/commands/: agent.rs  integrations.rs
src-tauri/src/db/: mod.rs
src-tauri/src/db/models/: agent.rs  message.rs
src-tauri/src/db/operations/: agent_sessions.rs  branches.rs  messages.rs
src-tauri/src/llm/: anthropic.rs  claude_cli.rs  mod.rs  ollama.rs  openai.rs  provider_utils.rs  traits.rs
src-tauri/src/tools/: anthropic.rs  files.rs  integrations.rs  mod.rs  shell.rs  subagent.rs  tool_outputs.rs  vault.rs
src-tauri/src/tools/anthropic/: batch_create.rs  batch_poll.rs  batch_process_files.rs  batch_results.rs  file_delete.rs  file_upload.rs  mod.rs
src-tauri/src/tools/files/: append.rs  create.rs  edit.rs  list.rs  mod.rs  read.rs  read_range.rs  search_replace.rs  write.rs
(+235 files in other folders)
